kubernetes/istio/istio/src/test/resources/route-rule-reviews-test-v2.yaml
apiVersion: config.istio.io/v1alpha2
kind: RouteRule
metadata:
  name: reviews-test-v2
spec:
  destination:
    name: reviews
  precedence: 2
  match:
    request:
      headers:
        cookie:
          regex: "^(.*?;)?(user=alex)(;.*)?$"
  route:
  - labels:
      version: v2
